fix(profile): wrap text on faqs button when fontsize is big

--- a/src/app/modules/profiles/shared-profiles/components/log-out-modal/log-out-modal.component.scss
+++ b/src/app/modules/profiles/shared-profiles/components/log-out-modal/log-out-modal.component.scss
@@ -32,8 +32,6 @@
         text-align: center;
 
         ion-button {
-          height: 16.42px;
-
           --border-radius: 0;
         }
       }
